--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,23 @@
 .App {
-  text-align: center;
+  text-align: left;
+}
+
+.planet-list {
+  display: inline-block;
+  margin: 1em;
+  padding: 1em;
+  border: .5px solid black;
+  border-radius: 3px;
+  width: 20vw;
+  height: 80vh;
+}
+
+.planet-detail {
+  display: inline-block;
+  margin: 1em;
+  padding: 1em;
+  border: .5px solid black;
+  border-radius: 3px;
+  width: 30vw;
+  height: 30vh
 }
